feat: get model attributes endpoint
